# azsdk-rust-2750

./: .gitattributes  .taplo.toml  README.md  azure.yaml  rust-toolchain.toml
.cargo/: config.toml
default/: Cargo.toml
default/src/: main.rs
infra/: main.bicep  main.bicepparam  resources.bicep
reqwest-no-gzip/: Cargo.toml
reqwest-no-gzip/src/: main.rs
reqwest-rustls/: Cargo.toml
reqwest-rustls-webpki/: Cargo.toml
reqwest-rustls/src/: main.rs
reqwest-system-proxy/: Cargo.toml  README.md
setup/: Cargo.toml
setup/src/: lib.rs
