[package]
name = "default"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
azure_identity = "0.28.0"
azure_security_keyvault_secrets = "0.7.0"
dotazure = "0.2.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[patch.crates-io]
azure_core = { version = "0.28.0", git = "https://github.com/heaths/azure-sdk-for-rust", branch = "issue2750" }
azure_core_macros = { version = "0.2.0", git = "https://github.com/heaths/azure-sdk-for-rust", branch = "issue2750" }
azure_identity = { version = "0.28.0", git = "https://github.com/heaths/azure-sdk-for-rust", branch = "issue2750" }
azure_security_keyvault_secrets = { version = "0.7.0", git = "https://github.com/heaths/azure-sdk-for-rust", branch = "issue2750" }
typespec = { version = "0.8.0", git = "https://github.com/heaths/azure-sdk-for-rust", branch = "issue2750" }
typespec_client_core = { version = "0.7.0", git = "https://github.com/heaths/azure-sdk-for-rust", branch = "issue2750" }
typespec_macros = { version = "0.7.0", git = "https://github.com/heaths/azure-sdk-for-rust", branch = "issue2750" }
