[package]
name = "reqwest-rustls"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
azure_core = { version = "0.28.0", default-features = false, features = [
    "reqwest",
] }
azure_identity = { version = "0.28.0", default-features = false }
azure_security_keyvault_secrets = { version = "0.7.0", default-features = false }
reqwest = { version = "0.12.23", default-features = false, features = [
    "deflate",
    "gzip",
    "rustls-tls-native-roots",
] }
setup.path = "../setup"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
