[package]
name = "reqwest-system-proxy"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
azure_identity = { version = "0.28.0" }
azure_security_keyvault_secrets = { version = "0.7.0" }
reqwest = { version = "0.12.23", default-features = false, features = [
    "system-proxy",
] }
setup.path = "../setup"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
